# small_tools_collection

./: _codeql_detected_source_root
Dragon_Quest_VI/: all_recovery.sh  crop.go  detect_color.py  detect_shapes.py  exit_fight.sh  fighting.go  fighting_new.go  locate_the_font.go  snapshot.sh  start_fight.sh  test.sh  walk.sh
abi_helper/: abi_helper.py  by_hand.txt
appliance_helper/: README_tools.md  Vagrantfile  build_kiwi_image.sh  build_kiwi_image_remote.sh  create-and-attach.sh  deploy_catkeeper.sh  fresh_install.sh  functions.sh  get_ip.sh  insert_data_disk.sh  install.sh  vm.sh
bmc/: cliclick_date_time.txt  cliclick_exit_vi.txt  cliclick_ntp.txt  cliclick_run_fabric.txt  cliclick_set_ip.txt  cliclick_set_udev_network_card_rule.txt  set_data_time.sh  set_ip.sh  set_ip.txt
ci/: bootstrap.sh  init.sh  setup-and-build-docker-image.sh
feishu-opencode-bot/: .env.example  .gitignore  README.md  config.example.yaml  config.py  main.py  pyproject.toml  requirements.txt  run.sh
feishu-opencode-bot/src/: __init__.py  cards.py  commands.py  exceptions.py  feishu_client.py  opencode_client.py  security.py  types.py
feishu-opencode-bot/tests/: test_cards.py  test_commands.py  test_feishu_client.py  test_main.py  test_opencode_client.py  test_security.py
git_helper/: git_helper_function
kabi_changes_helper/: kabi_changes_helper
kernel_helper/: build_v8.sh  update.sh
llm/: install_openclaw_ubuntu.sh
lmbench/: lmbench.py
misc/: add_group_and_other_permission.sh  assicdoc-to-markdown.sh  get_root_disk.sh  go-shadowsocks2-AEAD_CHACHA20_POLY1305.service  ss.sh  (+3 more)
(+69 files in other folders)
